<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_insta_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/billabong"
            android:text="@string/instagram"
            android:textColor="@android:color/black"
            android:textSize="@dimen/size_logo"
            app:layout_constraintBottom_toTopOf="@+id/et_username"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_common"
            android:layout_marginEnd="@dimen/margin_common"
            android:background="@drawable/edit_text_border"
            android:hint="@string/phone_number_email_and_username"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="@dimen/padding_common"
            app:layout_constraintBottom_toTopOf="@+id/et_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_insta_logo" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_common"
            android:layout_marginTop="@dimen/margin_common"
            android:layout_marginEnd="@dimen/margin_common"
            android:background="@drawable/edit_text_border"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="@dimen/padding_common"
            app:layout_constraintBottom_toTopOf="@+id/btn_firebase_login_signup"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_username" />

        <Button
            android:id="@+id/btn_firebase_login_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_common"
            android:layout_marginTop="@dimen/margin_common"
            android:layout_marginEnd="@dimen/margin_common"
            android:backgroundTint="@color/button_color"
            android:padding="@dimen/padding_common"
            android:text="@string/log_in"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            tools:targetApi="lollipop" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>