...
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:layout_marginBottom="@dimen/margin_common"
            android:background="@color/black"
            app:layout_constraintBottom_toTopOf="@id/tv_sign_in"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_sign_in"
...
